# algorithms

python/: README.md  pyproject.toml
python/src/data_structures/: dequeue.py  doubly_linked_list.py  dynamic_array.py  queue.py  singly_linked_list.py  stack.py
python/tests/: test_dequeue.py  test_doubly_linked_list.py  test_dynamic_array.py  test_queue.py  test_singly_linked_list.py  test_stack.py
