[project]
name = "data-structures"
version = "0.1.0"
description = ""
authors = [
    { name = "Dushyant Singh Shekhawat", email = "contact@dushyantss.com" },
]
license = { text = "MIT License" }
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
